--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=dating.db"
-  }
+  },
+  "TokenKey": "super secret key super secret key super secret keysuper secret keysuper secret key"
 }
