--- a/API/API.csproj
+++ b/API/API.csproj
@@ -18,6 +18,7 @@
     <Folder Include="Data/" />
     <Folder Include="DTOs/" />
     <Folder Include="Entities/" />
+    <Folder Include="Extensions/" />
     <Folder Include="Interfaces/" />
     <Folder Include="Services/" />
   </ItemGroup>
